[gd_scene load_steps=17 format=3 uid="uid://dakulavtgjbfx"]

[ext_resource type="Script" uid="uid://c0p1qkgyrvos4" path="res://systems/weapons/laser.gd" id="1_dyshe"]
[ext_resource type="Texture2D" uid="uid://wyn1ptvi6h4e" path="res://assets/glowing_circle.png" id="2_u5xnu"]

[sub_resource type="Curve" id="Curve_dyshe"]
_data = [Vector2(0, 0.5051245), 0.0, 0.0, 0, 0, Vector2(0.99496645, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_gfbf6"]
offsets = PackedFloat32Array(0.5825853, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_o7wcv"]
gradient = SubResource("Gradient_gfbf6")

[sub_resource type="Curve" id="Curve_8pofp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.49912277, 1), 0.0, -2.981906, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_abv2b"]
curve = SubResource("Curve_8pofp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nig8n"]
particle_flag_disable_z = true
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_abv2b")
color_ramp = SubResource("GradientTexture1D_o7wcv")

[sub_resource type="Gradient" id="Gradient_m1stt"]
offsets = PackedFloat32Array(0.44075403, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u5xnu"]
gradient = SubResource("Gradient_m1stt")

[sub_resource type="CurveTexture" id="CurveTexture_lk17g"]
curve = SubResource("Curve_8pofp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gfbf6"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 50.0
initial_velocity_min = 300.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_lk17g")
color_ramp = SubResource("GradientTexture1D_u5xnu")

[sub_resource type="Gradient" id="Gradient_lk17g"]
offsets = PackedFloat32Array(0.73159784, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gfbf6"]
gradient = SubResource("Gradient_lk17g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o7wcv"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(700, -10, 0)
emission_shape = 3
emission_box_extents = Vector3(700, 10, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
linear_accel_min = 99.99999
linear_accel_max = 99.99999
scale_min = 0.29999998
scale_max = 0.29999998
color_ramp = SubResource("GradientTexture1D_gfbf6")
turbulence_enabled = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m1stt"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(700, 10, 0)
emission_shape = 3
emission_box_extents = Vector3(700, 10, 1)
direction = Vector3(0, 1, 0)
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
linear_accel_min = 99.99999
linear_accel_max = 99.99999
scale_min = 0.29999998
scale_max = 0.29999998
color_ramp = SubResource("GradientTexture1D_gfbf6")

[node name="LaserBeam2D" type="RayCast2D"]
enabled = false
target_position = Vector2(1400, 0)
collide_with_areas = true
script = ExtResource("1_dyshe")
beam_particle_density = null

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 1400, 0)
width = 20.0
width_curve = SubResource("Curve_dyshe")
begin_cap_mode = 2
end_cap_mode = 2

[node name="CastingParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_u5xnu")
lifetime = 0.3
visibility_rect = Rect2(0, 0, 200, 200)
process_material = SubResource("ParticleProcessMaterial_nig8n")

[node name="CollisionParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(1400, 0)
amount = 16
texture = ExtResource("2_u5xnu")
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_gfbf6")

[node name="BeamParticlesUp" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
amount = 1
texture = ExtResource("2_u5xnu")
preprocess = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_o7wcv")

[node name="BeamParticlesDown" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
amount = 1
texture = ExtResource("2_u5xnu")
preprocess = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_m1stt")
